@@ -1,3 +1,9 @@
+2006-10-05 extensions in AliHLTTPCDisplay
+	- handling of new include directory structure of the HOMER header files
+	- default geometry file introduced
+	- library compile time and property functions added
+	- geometry file alice.geom added to distribution; to be installed in
+	  <prefix>/share/alice-hlt
 2006-09-07 HLT-v0-4
 	- TPC digit reader classes fetch row range from AliHLTTPCTransform
         - code from TPC commissioning version merged
